compiladores/ProjetoBase/src/compilador.output
Terminals unused in grammar

    GOTO
    ARRAY
    OF
    LABEL
    TYPE
    NADA


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: parte_declara_vars $@2 parte_declara_procs $@3 comando_composto

    6 parte_declara_vars: var

    7 $@4: %empty

    8 var: $@4 VAR declara_vars
    9    | %empty

   10 $@5: %empty

   11 declara_vars: declara_vars $@5 declara_var

   12 $@6: %empty

   13 declara_vars: $@6 declara_var

   14 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 comando_composto: T_BEGIN comandos T_END

   21 comandos: comandos PONTO_E_VIRGULA comando
   22         | comando

   23 comando: comando_vazio
   24        | comando_sem_rotulo

   25 comando_vazio: %empty

   26 $@7: %empty

   27 comando_sem_rotulo: IDENT $@7 atribuicao_ou_proc
   28                   | leitura
   29                   | escrita
   30                   | repeticao
   31                   | condicional
   32                   | comando_composto

   33 leitura: READ ABRE_PARENTESES lista_read FECHA_PARENTESES

   34 lista_read: lista_read VIRGULA IDENT
   35           | IDENT

   36 escrita: WRITE ABRE_PARENTESES lista_write FECHA_PARENTESES

   37 lista_write: lista_write VIRGULA IDENT
   38            | IDENT
   39            | lista_write VIRGULA NUM
   40            | NUM

   41 atribuicao_ou_proc: ATRIBUICAO expressao
   42                   | chamaProc

   43 expressao: expressao MAIOR expressao_simples
   44          | expressao MAIOR_IGUAL expressao_simples
   45          | expressao MENOR expressao_simples
   46          | expressao MENOR_IGUAL expressao_simples
   47          | expressao IGUAL expressao_simples
   48          | expressao DESIGUAL expressao_simples
   49          | expressao_simples

   50 expressao_simples: expressao_simples SOMA termo
   51                  | expressao_simples SUB termo
   52                  | expressao_simples OR termo
   53                  | termo

   54 termo: termo MULT fator
   55      | termo DIV fator
   56      | termo AND fator
   57      | fator

   58 fator: NUM

   59 $@8: %empty

   60 fator: IDENT $@8 atribui
   61      | TRUE
   62      | FALSE
   63      | NOT fator
   64      | ABRE_PARENTESES expressao FECHA_PARENTESES

   65 $@9: %empty

   66 $@10: %empty

   67 repeticao: WHILE $@9 expressao DO $@10 comando

   68 condicional: if_then
   69            | if_then ELSE comando_sem_rotulo

   70 $@11: %empty

   71 $@12: %empty

   72 if_then: IF $@11 expressao $@12 THEN comando_sem_rotulo

   73 parte_declara_procs: declara_procs
   74                    | declara_funcs
   75                    | comando_vazio

   76 declara_procs: declara_procs declara_proc
   77              | declara_proc

   78 $@13: %empty

   79 $@14: %empty

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

   81 paramsFormais: ABRE_PARENTESES listaParamsForms FECHA_PARENTESES
   82              | %empty

   83 listaParamsForms: listaParamsForms PONTO_E_VIRGULA declaraParams
   84                 | declaraParams

   85 $@15: %empty

   86 declaraParams: $@15 declaraParam DOIS_PONTOS tipoParam

   87 $@16: %empty

   88 declaraParams: VAR $@16 declaraParam DOIS_PONTOS tipoParam

   89 declaraParam: declaraParam VIRGULA IDENT
   90             | IDENT

   91 tipoParam: IDENT

   92 $@17: %empty

   93 $@18: %empty

   94 $@19: %empty

   95 blocoPF: parte_declara_vars $@17 parte_declara_procs $@18 comando_composto $@19 PONTO_E_VIRGULA

   96 chamaProc: paramsProc

   97 $@20: %empty

   98 paramsProc: ABRE_PARENTESES $@20 listaParams FECHA_PARENTESES
   99           | %empty

  100 $@21: %empty

  101 listaParams: listaParams VIRGULA $@21 expressao

  102 $@22: %empty

  103 listaParams: $@22 expressao

  104 declara_funcs: declara_funcs declara_func
  105              | declara_func

  106 $@23: %empty

  107 $@24: %empty

  108 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

  109 tipoFunc: IDENT

  110 atribui: ABRE_PARENTESES NUM FECHA_PARENTESES
  111        | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 33 36 64 81 98 110
    FECHA_PARENTESES (260) 2 33 36 64 81 98 110
    VIRGULA (261) 16 18 34 37 39 89 101
    PONTO_E_VIRGULA (262) 2 14 21 80 83 95 108
    DOIS_PONTOS (263) 14 86 88 108
    PONTO (264) 2
    T_BEGIN (265) 20
    T_END (266) 20
    VAR (267) 8 88
    IDENT (268) 2 15 16 17 18 19 27 34 35 37 38 60 80 89 90 91 108 109
    NUM (269) 39 40 58 110
    ATRIBUICAO (270) 41
    PROCEDURE (271) 80
    FUNCTION (272) 108
    GOTO (273)
    IF (274) 72
    THEN (275) 72
    ELSE (276) 69
    WHILE (277) 67
    DO (278) 67
    ARRAY (279)
    OF (280)
    LABEL (281)
    TYPE (282)
    AND (283) 56
    OR (284) 52
    NOT (285) 63
    SOMA (286) 50
    SUB (287) 51
    MULT (288) 54
    DIV (289) 55
    TRUE (290) 61
    FALSE (291) 62
    READ (292) 33
    WRITE (293) 36
    MAIOR (294) 43
    MAIOR_IGUAL (295) 44
    MENOR (296) 45
    MENOR_IGUAL (297) 46
    IGUAL (298) 47
    DESIGUAL (299) 48
    LOWER_THAN_ELSE (300)
    NADA (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa (48)
        on left: 2
        on right: 0
    $@1 (49)
        on left: 1
        on right: 2
    bloco (50)
        on left: 5
        on right: 2
    $@2 (51)
        on left: 3
        on right: 5
    $@3 (52)
        on left: 4
        on right: 5
    parte_declara_vars (53)
        on left: 6
        on right: 5 95
    var (54)
        on left: 8 9
        on right: 6
    $@4 (55)
        on left: 7
        on right: 8
    declara_vars (56)
        on left: 11 13
        on right: 8 11
    $@5 (57)
        on left: 10
        on right: 11
    $@6 (58)
        on left: 12
        on right: 13
    declara_var (59)
        on left: 14
        on right: 11 13
    tipo (60)
        on left: 15
        on right: 14
    lista_id_var (61)
        on left: 16 17
        on right: 14 16
    lista_idents (62)
        on left: 18 19
        on right: 2 18
    comando_composto (63)
        on left: 20
        on right: 5 32 95
    comandos (64)
        on left: 21 22
        on right: 20 21
    comando (65)
        on left: 23 24
        on right: 21 22 67
    comando_vazio (66)
        on left: 25
        on right: 23 75
    comando_sem_rotulo (67)
        on left: 27 28 29 30 31 32
        on right: 24 69 72
    $@7 (68)
        on left: 26
        on right: 27
    leitura (69)
        on left: 33
        on right: 28
    lista_read (70)
        on left: 34 35
        on right: 33 34
    escrita (71)
        on left: 36
        on right: 29
    lista_write (72)
        on left: 37 38 39 40
        on right: 36 37 39
    atribuicao_ou_proc (73)
        on left: 41 42
        on right: 27
    expressao (74)
        on left: 43 44 45 46 47 48 49
        on right: 41 43 44 45 46 47 48 64 67 72 101 103
    expressao_simples (75)
        on left: 50 51 52 53
        on right: 43 44 45 46 47 48 49 50 51 52
    termo (76)
        on left: 54 55 56 57
        on right: 50 51 52 53 54 55 56
    fator (77)
        on left: 58 60 61 62 63 64
        on right: 54 55 56 57 63
    $@8 (78)
        on left: 59
        on right: 60
    repeticao (79)
        on left: 67
        on right: 30
    $@9 (80)
        on left: 65
        on right: 67
    $@10 (81)
        on left: 66
        on right: 67
    condicional (82)
        on left: 68 69
        on right: 31
    if_then (83)
        on left: 72
        on right: 68 69
    $@11 (84)
        on left: 70
        on right: 72
    $@12 (85)
        on left: 71
        on right: 72
    parte_declara_procs (86)
        on left: 73 74 75
        on right: 5 95
    declara_procs (87)
        on left: 76 77
        on right: 73 76
    declara_proc (88)
        on left: 80
        on right: 76 77
    $@13 (89)
        on left: 78
        on right: 80
    $@14 (90)
        on left: 79
        on right: 80
    paramsFormais (91)
        on left: 81 82
        on right: 80 108
    listaParamsForms (92)
        on left: 83 84
        on right: 81 83
    declaraParams (93)
        on left: 86 88
        on right: 83 84
    $@15 (94)
        on left: 85
        on right: 86
    $@16 (95)
        on left: 87
        on right: 88
    declaraParam (96)
        on left: 89 90
        on right: 86 88 89
    tipoParam (97)
        on left: 91
        on right: 86 88
    blocoPF (98)
        on left: 95
        on right: 80 108
    $@17 (99)
        on left: 92
        on right: 95
    $@18 (100)
        on left: 93
        on right: 95
    $@19 (101)
        on left: 94
        on right: 95
    chamaProc (102)
        on left: 96
        on right: 42
    paramsProc (103)
        on left: 98 99
        on right: 96
    $@20 (104)
        on left: 97
        on right: 98
    listaParams (105)
        on left: 101 103
        on right: 98 101
    $@21 (106)
        on left: 100
        on right: 101
    $@22 (107)
        on left: 102
        on right: 103
    declara_funcs (108)
        on left: 104 105
        on right: 74 104
    declara_func (109)
        on left: 108
        on right: 104 105
    $@23 (110)
        on left: 106
        on right: 108
    $@24 (111)
        on left: 107
        on right: 108
    tipoFunc (112)
        on left: 109
        on right: 108
    atribui (113)
        on left: 110 111
        on right: 60


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   19 lista_idents: IDENT .

    $default  reduce using rule 19 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   18 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR       reduce using rule 7 ($@4)
    $default  reduce using rule 9 (var)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@4                 go to state 16


State 12

   18 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 18 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    5 bloco: parte_declara_vars . $@2 parte_declara_procs $@3 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    6 parte_declara_vars: var .

    $default  reduce using rule 6 (parte_declara_vars)


State 16

    8 var: $@4 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    5 bloco: parte_declara_vars $@2 . parte_declara_procs $@3 comando_composto

    PROCEDURE  shift, and go to state 20
    FUNCTION   shift, and go to state 21

    $default  reduce using rule 25 (comando_vazio)

    comando_vazio        go to state 22
    parte_declara_procs  go to state 23
    declara_procs        go to state 24
    declara_proc         go to state 25
    declara_funcs        go to state 26
    declara_func         go to state 27


State 19

    8 var: $@4 VAR . declara_vars

    $default  reduce using rule 12 ($@6)

    declara_vars  go to state 28
    $@6           go to state 29


State 20

   80 declara_proc: PROCEDURE . $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    $default  reduce using rule 78 ($@13)

    $@13  go to state 30


State 21

  108 declara_func: FUNCTION . $@23 IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    $default  reduce using rule 106 ($@23)

    $@23  go to state 31


State 22

   75 parte_declara_procs: comando_vazio .

    $default  reduce using rule 75 (parte_declara_procs)


State 23

    5 bloco: parte_declara_vars $@2 parte_declara_procs . $@3 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 32


State 24

   73 parte_declara_procs: declara_procs .
   76 declara_procs: declara_procs . declara_proc

    PROCEDURE  shift, and go to state 20

    $default  reduce using rule 73 (parte_declara_procs)

    declara_proc  go to state 33


State 25

   77 declara_procs: declara_proc .

    $default  reduce using rule 77 (declara_procs)


State 26

   74 parte_declara_procs: declara_funcs .
  104 declara_funcs: declara_funcs . declara_func

    FUNCTION  shift, and go to state 21

    $default  reduce using rule 74 (parte_declara_procs)

    declara_func  go to state 34


State 27

  105 declara_funcs: declara_func .

    $default  reduce using rule 105 (declara_funcs)


State 28

    8 var: $@4 VAR declara_vars .
   11 declara_vars: declara_vars . $@5 declara_var

    IDENT     reduce using rule 10 ($@5)
    $default  reduce using rule 8 (var)

    $@5  go to state 35


State 29

   13 declara_vars: $@6 . declara_var

    IDENT  shift, and go to state 36

    declara_var   go to state 37
    lista_id_var  go to state 38


State 30

   80 declara_proc: PROCEDURE $@13 . IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    IDENT  shift, and go to state 39


State 31

  108 declara_func: FUNCTION $@23 . IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    IDENT  shift, and go to state 40


State 32

    5 bloco: parte_declara_vars $@2 parte_declara_procs $@3 . comando_composto

    T_BEGIN  shift, and go to state 41

    comando_composto  go to state 42


State 33

   76 declara_procs: declara_procs declara_proc .

    $default  reduce using rule 76 (declara_procs)


State 34

  104 declara_funcs: declara_funcs declara_func .

    $default  reduce using rule 104 (declara_funcs)


State 35

   11 declara_vars: declara_vars $@5 . declara_var

    IDENT  shift, and go to state 36

    declara_var   go to state 43
    lista_id_var  go to state 38


State 36

   17 lista_id_var: IDENT .

    $default  reduce using rule 17 (lista_id_var)


State 37

   13 declara_vars: $@6 declara_var .

    $default  reduce using rule 13 (declara_vars)


State 38

   14 declara_var: lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 44
    DOIS_PONTOS  shift, and go to state 45


State 39

   80 declara_proc: PROCEDURE $@13 IDENT . $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    $default  reduce using rule 79 ($@14)

    $@14  go to state 46


State 40

  108 declara_func: FUNCTION $@23 IDENT . $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    $default  reduce using rule 107 ($@24)

    $@24  go to state 47


State 41

   20 comando_composto: T_BEGIN . comandos T_END

    T_BEGIN  shift, and go to state 41
    IDENT    shift, and go to state 48
    IF       shift, and go to state 49
    WHILE    shift, and go to state 50
    READ     shift, and go to state 51
    WRITE    shift, and go to state 52

    $default  reduce using rule 25 (comando_vazio)

    comando_composto    go to state 53
    comandos            go to state 54
    comando             go to state 55
    comando_vazio       go to state 56
    comando_sem_rotulo  go to state 57
    leitura             go to state 58
    escrita             go to state 59
    repeticao           go to state 60
    condicional         go to state 61
    if_then             go to state 62


State 42

    5 bloco: parte_declara_vars $@2 parte_declara_procs $@3 comando_composto .

    $default  reduce using rule 5 (bloco)


State 43

   11 declara_vars: declara_vars $@5 declara_var .

    $default  reduce using rule 11 (declara_vars)


State 44

   16 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 63


State 45

   14 declara_var: lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 64

    tipo  go to state 65


State 46

   80 declara_proc: PROCEDURE $@13 IDENT $@14 . paramsFormais PONTO_E_VIRGULA blocoPF

    ABRE_PARENTESES  shift, and go to state 66

    $default  reduce using rule 82 (paramsFormais)

    paramsFormais  go to state 67


State 47

  108 declara_func: FUNCTION $@23 IDENT $@24 . paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    ABRE_PARENTESES  shift, and go to state 66

    $default  reduce using rule 82 (paramsFormais)

    paramsFormais  go to state 68


State 48

   27 comando_sem_rotulo: IDENT . $@7 atribuicao_ou_proc

    $default  reduce using rule 26 ($@7)

    $@7  go to state 69


State 49

   72 if_then: IF . $@11 expressao $@12 THEN comando_sem_rotulo

    $default  reduce using rule 70 ($@11)

    $@11  go to state 70


State 50

   67 repeticao: WHILE . $@9 expressao DO $@10 comando

    $default  reduce using rule 65 ($@9)

    $@9  go to state 71


State 51

   33 leitura: READ . ABRE_PARENTESES lista_read FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 72


State 52

   36 escrita: WRITE . ABRE_PARENTESES lista_write FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 73


State 53

   32 comando_sem_rotulo: comando_composto .

    $default  reduce using rule 32 (comando_sem_rotulo)


State 54

   20 comando_composto: T_BEGIN comandos . T_END
   21 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 74
    T_END            shift, and go to state 75


State 55

   22 comandos: comando .

    $default  reduce using rule 22 (comandos)


State 56

   23 comando: comando_vazio .

    $default  reduce using rule 23 (comando)


State 57

   24 comando: comando_sem_rotulo .

    $default  reduce using rule 24 (comando)


State 58

   28 comando_sem_rotulo: leitura .

    $default  reduce using rule 28 (comando_sem_rotulo)


State 59

   29 comando_sem_rotulo: escrita .

    $default  reduce using rule 29 (comando_sem_rotulo)


State 60

   30 comando_sem_rotulo: repeticao .

    $default  reduce using rule 30 (comando_sem_rotulo)


State 61

   31 comando_sem_rotulo: condicional .

    $default  reduce using rule 31 (comando_sem_rotulo)


State 62

   68 condicional: if_then .
   69            | if_then . ELSE comando_sem_rotulo

    ELSE  shift, and go to state 76

    $default  reduce using rule 68 (condicional)


State 63

   16 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 16 (lista_id_var)


State 64

   15 tipo: IDENT .

    $default  reduce using rule 15 (tipo)


State 65

   14 declara_var: lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 77


State 66

   81 paramsFormais: ABRE_PARENTESES . listaParamsForms FECHA_PARENTESES

    VAR  shift, and go to state 78

    $default  reduce using rule 85 ($@15)

    listaParamsForms  go to state 79
    declaraParams     go to state 80
    $@15              go to state 81


State 67

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais . PONTO_E_VIRGULA blocoPF

    PONTO_E_VIRGULA  shift, and go to state 82


State 68

  108 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais . DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    DOIS_PONTOS  shift, and go to state 83


State 69

   27 comando_sem_rotulo: IDENT $@7 . atribuicao_ou_proc

    ABRE_PARENTESES  shift, and go to state 84
    ATRIBUICAO       shift, and go to state 85

    $default  reduce using rule 99 (paramsProc)

    atribuicao_ou_proc  go to state 86
    chamaProc           go to state 87
    paramsProc          go to state 88


State 70

   72 if_then: IF $@11 . expressao $@12 THEN comando_sem_rotulo

    ABRE_PARENTESES  shift, and go to state 89
    IDENT            shift, and go to state 90
    NUM              shift, and go to state 91
    NOT              shift, and go to state 92
    TRUE             shift, and go to state 93
    FALSE            shift, and go to state 94

    expressao          go to state 95
    expressao_simples  go to state 96
    termo              go to state 97
    fator              go to state 98


State 71

   67 repeticao: WHILE $@9 . expressao DO $@10 comando

    ABRE_PARENTESES  shift, and go to state 89
    IDENT            shift, and go to state 90
    NUM              shift, and go to state 91
    NOT              shift, and go to state 92
    TRUE             shift, and go to state 93
    FALSE            shift, and go to state 94

    expressao          go to state 99
    expressao_simples  go to state 96
    termo              go to state 97
    fator              go to state 98


State 72

   33 leitura: READ ABRE_PARENTESES . lista_read FECHA_PARENTESES

    IDENT  shift, and go to state 100

    lista_read  go to state 101


State 73

   36 escrita: WRITE ABRE_PARENTESES . lista_write FECHA_PARENTESES

    IDENT  shift, and go to state 102
    NUM    shift, and go to state 103

    lista_write  go to state 104


State 74

   21 comandos: comandos PONTO_E_VIRGULA . comando

    T_BEGIN  shift, and go to state 41
    IDENT    shift, and go to state 48
    IF       shift, and go to state 49
    WHILE    shift, and go to state 50
    READ     shift, and go to state 51
    WRITE    shift, and go to state 52

    $default  reduce using rule 25 (comando_vazio)

    comando_composto    go to state 53
    comando             go to state 105
    comando_vazio       go to state 56
    comando_sem_rotulo  go to state 57
    leitura             go to state 58
    escrita             go to state 59
    repeticao           go to state 60
    condicional         go to state 61
    if_then             go to state 62


State 75

   20 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 20 (comando_composto)


State 76

   69 condicional: if_then ELSE . comando_sem_rotulo

    T_BEGIN  shift, and go to state 41
    IDENT    shift, and go to state 48
    IF       shift, and go to state 49
    WHILE    shift, and go to state 50
    READ     shift, and go to state 51
    WRITE    shift, and go to state 52

    comando_composto    go to state 53
    comando_sem_rotulo  go to state 106
    leitura             go to state 58
    escrita             go to state 59
    repeticao           go to state 60
    condicional         go to state 61
    if_then             go to state 62


State 77

   14 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA .

    $default  reduce using rule 14 (declara_var)


State 78

   88 declaraParams: VAR . $@16 declaraParam DOIS_PONTOS tipoParam

    $default  reduce using rule 87 ($@16)

    $@16  go to state 107


State 79

   81 paramsFormais: ABRE_PARENTESES listaParamsForms . FECHA_PARENTESES
   83 listaParamsForms: listaParamsForms . PONTO_E_VIRGULA declaraParams

    FECHA_PARENTESES  shift, and go to state 108
    PONTO_E_VIRGULA   shift, and go to state 109


State 80

   84 listaParamsForms: declaraParams .

    $default  reduce using rule 84 (listaParamsForms)


State 81

   86 declaraParams: $@15 . declaraParam DOIS_PONTOS tipoParam

    IDENT  shift, and go to state 110

    declaraParam  go to state 111


State 82

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA . blocoPF

    VAR       reduce using rule 7 ($@4)
    $default  reduce using rule 9 (var)

    parte_declara_vars  go to state 112
    var                 go to state 15
    $@4                 go to state 16
    blocoPF             go to state 113


State 83

  108 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais DOIS_PONTOS . tipoFunc PONTO_E_VIRGULA blocoPF

    IDENT  shift, and go to state 114

    tipoFunc  go to state 115


State 84

   98 paramsProc: ABRE_PARENTESES . $@20 listaParams FECHA_PARENTESES

    $default  reduce using rule 97 ($@20)

    $@20  go to state 116


State 85

   41 atribuicao_ou_proc: ATRIBUICAO . expressao

    ABRE_PARENTESES  shift, and go to state 89
    IDENT            shift, and go to state 90
    NUM              shift, and go to state 91
    NOT              shift, and go to state 92
    TRUE             shift, and go to state 93
    FALSE            shift, and go to state 94

    expressao          go to state 117
    expressao_simples  go to state 96
    termo              go to state 97
    fator              go to state 98


State 86

   27 comando_sem_rotulo: IDENT $@7 atribuicao_ou_proc .

    $default  reduce using rule 27 (comando_sem_rotulo)


State 87

   42 atribuicao_ou_proc: chamaProc .

    $default  reduce using rule 42 (atribuicao_ou_proc)


State 88

   96 chamaProc: paramsProc .

    $default  reduce using rule 96 (chamaProc)


State 89

   64 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 89
    IDENT            shift, and go to state 90
    NUM              shift, and go to state 91
    NOT              shift, and go to state 92
    TRUE             shift, and go to state 93
    FALSE            shift, and go to state 94

    expressao          go to state 118
    expressao_simples  go to state 96
    termo              go to state 97
    fator              go to state 98


State 90

   60 fator: IDENT . $@8 atribui

    $default  reduce using rule 59 ($@8)

    $@8  go to state 119


State 91

   58 fator: NUM .

    $default  reduce using rule 58 (fator)


State 92

   63 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 89
    IDENT            shift, and go to state 90
    NUM              shift, and go to state 91
    NOT              shift, and go to state 92
    TRUE             shift, and go to state 93
    FALSE            shift, and go to state 94

    fator  go to state 120


State 93

   61 fator: TRUE .

    $default  reduce using rule 61 (fator)


State 94

   62 fator: FALSE .

    $default  reduce using rule 62 (fator)


State 95

   43 expressao: expressao . MAIOR expressao_simples
   44          | expressao . MAIOR_IGUAL expressao_simples
   45          | expressao . MENOR expressao_simples
   46          | expressao . MENOR_IGUAL expressao_simples
   47          | expressao . IGUAL expressao_simples
   48          | expressao . DESIGUAL expressao_simples
   72 if_then: IF $@11 expressao . $@12 THEN comando_sem_rotulo

    MAIOR        shift, and go to state 121
    MAIOR_IGUAL  shift, and go to state 122
    MENOR        shift, and go to state 123
    MENOR_IGUAL  shift, and go to state 124
    IGUAL        shift, and go to state 125
    DESIGUAL     shift, and go to state 126

    $default  reduce using rule 71 ($@12)

    $@12  go to state 127


State 96

   49 expressao: expressao_simples .
   50 expressao_simples: expressao_simples . SOMA termo
   51                  | expressao_simples . SUB termo
   52                  | expressao_simples . OR termo

    OR    shift, and go to state 128
    SOMA  shift, and go to state 129
    SUB   shift, and go to state 130

    $default  reduce using rule 49 (expressao)


State 97

   53 expressao_simples: termo .
   54 termo: termo . MULT fator
   55      | termo . DIV fator
   56      | termo . AND fator

    AND   shift, and go to state 131
    MULT  shift, and go to state 132
    DIV   shift, and go to state 133

    $default  reduce using rule 53 (expressao_simples)


State 98

   57 termo: fator .

    $default  reduce using rule 57 (termo)


State 99

   43 expressao: expressao . MAIOR expressao_simples
   44          | expressao . MAIOR_IGUAL expressao_simples
   45          | expressao . MENOR expressao_simples
   46          | expressao . MENOR_IGUAL expressao_simples
   47          | expressao . IGUAL expressao_simples
   48          | expressao . DESIGUAL expressao_simples
   67 repeticao: WHILE $@9 expressao . DO $@10 comando

    DO           shift, and go to state 134
    MAIOR        shift, and go to state 121
    MAIOR_IGUAL  shift, and go to state 122
    MENOR        shift, and go to state 123
    MENOR_IGUAL  shift, and go to state 124
    IGUAL        shift, and go to state 125
    DESIGUAL     shift, and go to state 126


State 100

   35 lista_read: IDENT .

    $default  reduce using rule 35 (lista_read)


State 101

   33 leitura: READ ABRE_PARENTESES lista_read . FECHA_PARENTESES
   34 lista_read: lista_read . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 135
    VIRGULA           shift, and go to state 136


State 102

   38 lista_write: IDENT .

    $default  reduce using rule 38 (lista_write)


State 103

   40 lista_write: NUM .

    $default  reduce using rule 40 (lista_write)


State 104

   36 escrita: WRITE ABRE_PARENTESES lista_write . FECHA_PARENTESES
   37 lista_write: lista_write . VIRGULA IDENT
   39            | lista_write . VIRGULA NUM

    FECHA_PARENTESES  shift, and go to state 137
    VIRGULA           shift, and go to state 138


State 105

   21 comandos: comandos PONTO_E_VIRGULA comando .

    $default  reduce using rule 21 (comandos)


State 106

   69 condicional: if_then ELSE comando_sem_rotulo .

    $default  reduce using rule 69 (condicional)


State 107

   88 declaraParams: VAR $@16 . declaraParam DOIS_PONTOS tipoParam

    IDENT  shift, and go to state 110

    declaraParam  go to state 139


State 108

   81 paramsFormais: ABRE_PARENTESES listaParamsForms FECHA_PARENTESES .

    $default  reduce using rule 81 (paramsFormais)


State 109

   83 listaParamsForms: listaParamsForms PONTO_E_VIRGULA . declaraParams

    VAR  shift, and go to state 78

    $default  reduce using rule 85 ($@15)

    declaraParams  go to state 140
    $@15           go to state 81


State 110

   90 declaraParam: IDENT .

    $default  reduce using rule 90 (declaraParam)


State 111

   86 declaraParams: $@15 declaraParam . DOIS_PONTOS tipoParam
   89 declaraParam: declaraParam . VIRGULA IDENT

    VIRGULA      shift, and go to state 141
    DOIS_PONTOS  shift, and go to state 142


State 112

   95 blocoPF: parte_declara_vars . $@17 parte_declara_procs $@18 comando_composto $@19 PONTO_E_VIRGULA

    $default  reduce using rule 92 ($@17)

    $@17  go to state 143


State 113

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF .

    $default  reduce using rule 80 (declara_proc)


State 114

  109 tipoFunc: IDENT .

    $default  reduce using rule 109 (tipoFunc)


State 115

  108 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc . PONTO_E_VIRGULA blocoPF

    PONTO_E_VIRGULA  shift, and go to state 144


State 116

   98 paramsProc: ABRE_PARENTESES $@20 . listaParams FECHA_PARENTESES

    $default  reduce using rule 102 ($@22)

    listaParams  go to state 145
    $@22         go to state 146


State 117
